# f1-tracker

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  prettier.config.cjs
pipeline/: README.md  alembic.ini  pyproject.toml
pipeline/alembic/: env.py
pipeline/alembic/versions/: 0b2240c61f57_add_driver_headshot_url.py  0f59c8043d16_initial_schema.py  247f678364c8_add_constructor_has_logo_column.py  40b636f140ae_add_precomputed_fastest_lap_and_.py  6391e77484c7_replace_headshot_url_with_has_headshot_.py  6d62f6ef604f_add_qualifying_sector_columns.py  88d74c1cf0b8_add_unique_constraints_and_missing_.py  92108da62639_add_circuit_layouts_table.py  d9a3fc4f0e88_add_country_code_columns.py
pipeline/scripts/: download_track_svgs.py  refresh_views.py  seed.py  validate.py
pipeline/src/: config.py
pipeline/src/api/: constants.py  country_codes.py  main.py  pagination.py  serializers.py
pipeline/src/api/routers/: champions.py  circuits.py  compare.py  constructors.py  drivers.py  health.py  races.py  records.py  search.py  seasons.py  standings.py
pipeline/src/db/: database.py  models.py  queries.py
pipeline/src/ingestion/: base.py  circuit_layouts.py  drivers.py  full_load.py  images.py  lap_times.py  pit_stops.py  qualifying_sectors.py  races.py  results.py  seasons.py  standings.py
pipeline/tests/: conftest.py  test_champions.py  test_circuits.py  test_compare.py  test_constructors.py  test_drivers.py  test_health.py  test_races.py  test_records.py  test_search.py  test_seasons.py  test_standings.py
tasks/: todo.md  (+1 more)
(+126 files in other folders)
